--- a/Part_II_slide_deck.ipynb
+++ b/Part_II_slide_deck.ipynb
@@ -8,8 +8,8 @@
     }
    },
    "source": [
-    "# Part II - (Presentation Title)\n",
-    "## by (your name here)"
+    "# Part II - (Loan Data Exploration from Prosper)\n",
+    "## by (Ngwe Becky)"
    ]
   },
   {
@@ -20,21 +20,16 @@
     }
    },
    "source": [
-    ">**Before you start**: You must have the README.md file ready that include a summary of main findings that reflects on the steps taken during the data exploration (Part I notebook). The README.md file should also describes the key insights that will be conveyed by the explanatory slide deck (Part II  outcome)\n",
-    "\n",
-    "\n",
     "\n",
     "## Investigation Overview\n",
     "\n",
-    "\n",
-    "> Describe the overall goals of your presentation here. Add a summary of key insights at the start of the notebook, just as you added in the README.md. This will help your notebook to stay aligned to the key insights you want to include in your slide deck.\n",
-    "\n",
-    "> **Rubric Tip**: The key insights in the slideshow must match those documented in the README.md summary. \n",
-    "\n",
+    "In this in this investigation, the following was figured out:\n",
+    "* The factors which can be used to predict default on credit.\n",
+    "* What factors influence Prosper ratings.\n",
     "\n",
     "## Dataset Overview\n",
     "\n",
-    "> Provide a brief overview of the dataset to be presented here."
+    "This data set contains 113937 loans with 81 variables on each loan, for the purpose of this investigation I've taken the following variables: Term, LoanStatus, BorrowerRate, ProsperRating (Alpha), ListingCategory (numeric), EmploymentStatus, DelinquenciesLast7Years, StatedMonthlyIncome, TotalProsperLoans, LoanOriginalAmount, LoanOriginationDate, Recommendations, Investors."
    ]
   },
   {
@@ -214,7 +209,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.9 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -228,7 +223,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "174822e825185c4920aa978c95f8248ed427a7d88d6a9a35e6f2e2d73ee4cc70"
+   }
   }
  },
  "nbformat": 4,
